--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,7 +143,7 @@ p {
 }
 
 .card3 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8)), url(../public/src/images/makeup1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8)), url(../src/images/makeup1.jpg);
     background-size: cover;
     background-position: center;
     color: antiquewhite;
