--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,18 +14,24 @@ body {
     background-position: center;
     background-size: cover;
     height: 100vh;
+    position: relative;
 }
 
-#navbarNav a {
-    color: antiquewhite;
+.navbarNav a {
+    color: rgb(230, 215, 200);
     font-size: 15px;
-    padding: 25px;
+    padding: 15px;
     text-decoration: none;
+    margin-left: 50px;
+    margin-right: 20px;
 }
 
-#navbarNav a:hover {
+.navbarNav a:hover {
     background: chocolate;
     border-radius: 5px;
+    height: 50px;
+    color: black;
+    text-align: center;
 }
 
 .content {
@@ -62,8 +68,9 @@ p {
 
 .navbar {
     justify-content: space-evenly;
-    background-color: bisque;
+    background-color: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8));
     height: 100px;
+    margin-right: 100px;
 }
 
 .logo {
@@ -143,7 +150,7 @@ p {
 }
 
 .card3 {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8)), url(../src/images/makeup1.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8)), url(../images/makeup1.jpg);
     background-size: cover;
     background-position: center;
     color: antiquewhite;
