--- a/src/css/style.css
+++ b/src/css/style.css
@@ -13,10 +13,14 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
-    position: relative;
+    min-height: 90vh;
+    
 }
+#bg-custom{
+    background-color:  linear-gradient( rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8));
+    color: black;
 
+}
 .navbarNav a {
     color: rgb(230, 215, 200);
     font-size: 15px;
@@ -40,7 +44,8 @@ body {
     text-align: center;
     color: white;
     width: 100%;
-    top: 50%;
+    top: 25%;
+   
 }
 
 span {
@@ -66,7 +71,7 @@ p {
     font-display: inherit;
 }
 
-.navbar {
+#navbar {
     justify-content: space-evenly;
     background-color: linear-gradient(rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8));
     height: 100px;
@@ -171,3 +176,9 @@ p {
     padding: 1px;
     color: black;
 }
+
+@media screen and (min-width: 480px) {
+    .content {
+        margin-top: 15%;
+    }
+  }
