--- a/src/css/style.css
+++ b/src/css/style.css
@@ -182,3 +182,16 @@ p {
         margin-top: 15%;
     }
   }
+#topbtn{
+    outline: none;
+    border: none;
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    padding:10px;
+    z-index: 99;
+    color: white;
+    background:linear-gradient( rgba(131, 75, 75, 0.8), rgba(0, 0, 0, 0.8));
+    border-radius: 20px;
+    
+}
