--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,9 @@ body {
     font-family: 'Work Sans', sans-serif;
     line-height: 10px;
 }
-
+.navigation{
+    background:linear-gradient( rgba(131, 75, 75, 0.8), rgba(0, 0, 0, 0.8));
+}
 .hero {
     background-image: linear-gradient( rgba(0, 0, 0, 0.8), rgba(131, 75, 75, 0.8)), url(../images/dreadlockretouch.jpg);
     background-repeat: no-repeat;
@@ -22,7 +24,7 @@ body {
 
 }
 .navbarNav a {
-    color: rgb(230, 215, 200);
+    color: white;
     font-size: 15px;
     padding: 15px;
     text-decoration: none;
